# trading

./: .gitignore  CHANGES.txt  README.md  requirements.txt
alpaca/: bars.sh
bollinger-bands/: Cargo.toml
bollinger-bands/src/: main.rs
coinbase/: README.md  cdp_api_key.example.json  coinbase-advanced.py  jwt.py  legacy.py
datasets/: AAPL-2015-2023.csv  GOOG-2015-2023.csv  btc-from-kaggle.py
forex-triangular-arbitrage/: graph.zig
indicators/: CMakeLists.txt
indicators-c++/: CMakeLists.txt
indicators-c++/examples/: example.cpp
indicators-c++/include/: indicators.h
indicators-c++/src/: portfolios.cpp
indicators-c++/test/: indicators.test.cpp
indicators-rs/: Cargo.toml
indicators-rs/src/: dmi.rs  ema.rs  lib.rs  ma.rs  macd.rs  rsi.rs
indicators/include/: indicators.h  portfolios.h
indicators/src/: indicators.cpp
indicators/test/: portfolios.test.cpp
julia/: crossing-moving-averages.jl
limit-order-book/: build.zig  build.zig.zon
limit-order-book/src/: root.zig
mq5/: crossing-moving-averages.mq5
news-sentiment/: example.py  notebook.ipynb  requirements.txt
notebooks/: cummulative_returns.ipynb
pinescript/: crossing-moving-averages.pine
python/: crossingavg.py
rsi/: Makefile  rsi.c  rsi.ipynb
stockexplorer/: Makefile  README  requests.c  requests.h  stock.cc
trading-bots/basic-example/: botdemo.py  defs.py  filereader.py  indicators.py  portfolio.py  wsclient.py  wsserver.py
